# fastapiex-settings

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  security.yml
docs/: SOURCE_RUNTIME.md
scripts/: supply_chain_check.sh
src/fastapiex/settings/: __init__.py  access.py  accessors.py  base.py  bootstrap.py  builtin_sources.py  casefold_mapping.py  constants.py  context.py  control_contract.py  control_convergence.py  control_model.py  control_resolver.py  controls.py  core_settings.py  declaration_contract.py  declarations.py  discovery.py  env_keypath.py  env_value_parser.py  exceptions.py  key_policy.py  lifecycle.py  live_config.py  loader.py  manager.py  module_rediscovery.py  name_resolver.py  path_lookup.py  pathing.py  projection.py  projection_utils.py  query.py  query_engine.py  raw_projection.py  refresh_engine.py  refs.py  registry.py  runtime_options.py  runtime_state.py  (+9 more)
tests/: test_control_contract.py  test_env_keypath.py  test_env_value_parser.py  test_live_config_entries.py  test_live_config_store.py  test_loader.py  test_query_engine.py  test_registry_snapshot.py  test_settings_runtime.py  test_snapshot_projection.py
