[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "fastapiex-settings"
version = "0.1.0"
description = "Global settings runtime extension for FastAPIEx"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Henri" }
]
maintainers = [
  { name = "Henri" }
]
keywords = [
  "fastapi",
  "settings",
  "configuration",
  "pydantic",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.8,<3",
  "PyYAML>=6.0.2,<7",
]

[project.urls]
Homepage = "https://github.com/ArakawaHenri/fastapiex-settings"
Repository = "https://github.com/ArakawaHenri/fastapiex-settings"
Issues = "https://github.com/ArakawaHenri/fastapiex-settings/issues"
Security = "https://github.com/ArakawaHenri/fastapiex-settings/blob/main/SECURITY.md"

[dependency-groups]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]
security = [
  "pip-audit>=2.8.0",
  "cyclonedx-bom>=4.1.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
pythonpath = ["src", "."]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py312"
include = ["src/**/*.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4"]

[tool.mypy]
files = ["src"]
strict = true

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "tests",
  "LICENSE",
  "README.md",
  "SECURITY.md",
  "scripts",
  "pyproject.toml",
  "uv.lock",
]
